--- a/ordinaryextraordinary/style.css
+++ b/ordinaryextraordinary/style.css
@@ -2,6 +2,7 @@ html, body {
   cursor: url(whitechalk.png) 102 128, default;
   margin: 0;
   padding: 0;
+  overflow:hidden;
 }
 canvas {
   display: block;
