--- a/subcultures/harajukufashion/harajuku.css
+++ b/subcultures/harajukufashion/harajuku.css
@@ -13,20 +13,20 @@ body {
 .fashion {
     margin-top:2%;
     margin-bottom:2%;
-    height: 461px;
-    width: 461px;
+    height: 30vw;
+    width: 30vw;
 }
 
 .windows.box {
     position:relative;
-    height:461px;
-    width: 974px;
-    margin-top:20px;
-    margin-bottom:20px;
+    height:30vw;
+    width: 63vw;
+    margin-top:2%;
+    margin-bottom:2%;
 }
 
 .container.decora:hover {
-    cursor: url(stickerhkfairyc.png) 4 68, auto;
+    cursor: url(stickerhkfairyc2.png) 4 68, auto;
 }
 
 .container.lolita:hover {
@@ -43,13 +43,13 @@ body {
     width:100vw;
     align-self: center;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .windowbodyp {
     position: absolute;
-    height: 460px;
-    width: 973px;
+    height: calc(30vw - 1px);
+    width: calc(63vw - 1px);
     top:0;
     left:0;
     background-color: #FFC0E1;
@@ -57,8 +57,8 @@ body {
 
 .windowbodyb {
     position: absolute;
-    height: 461px;
-    width: 974px;
+    height:30vw;
+    width: 63vw;
     bottom:0;
     left:0;
     background-color: #000000;
@@ -67,7 +67,7 @@ body {
 .windowbodyww {
     position:absolute;
     height: 1px;
-    width: 971px;
+    width: calc(63vw - 3px);
     top:1px;
     left:1px;
     background-color: #FFFFFF;
@@ -75,7 +75,7 @@ body {
 
 .windowbodywh {
     position:absolute;
-    height: 459px;
+    height: calc(30vw - 2px);
     width: 1px;
     top:1px;
     left:1px;
@@ -84,7 +84,7 @@ body {
 
 .windowbodydph {
     position:absolute;
-    height: 459px;
+    height: calc(30vw - 2px);
     width: 1px;
     bottom:1px;
     right:1px;
@@ -94,7 +94,7 @@ body {
 .windowbodydpw {
     position:absolute;
     height: 1px;
-    width: 972px;
+    width: calc(63vw - 2px);
     bottom:1px;
     right:1px;
     background-color: #FA81BF;
@@ -102,24 +102,88 @@ body {
 
 .windowheader {
     position:absolute;
-    height: 18px;
-    width: 969px;
+    height: 1.75vw;
+    width: calc(63vw - 5px);
     top: 3px;
     left: 3px;
     background-color:#F5419D;
 }
 
 .welcome {
-    width: 100%;
+    width: 99%;
     margin:0;
-    font-size: 18px;
+    font-size: 1.5vw;
     color:white;
     font-weight:bold;
     position:absolute;
-    top:0;
+    top: 0.2vh;
     left:5px;
-     display: flex;
-     justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
+}
+
+.link {
+    position:absolute;
+    font-size: 1.5vw;
+    right:15%;
+    bottom:0%;
+    text-decoration:none;
+    color:black;
+    font-weight:bold;
+}
+
+.linkbox {
+    position:relative;
+    height:1.55vw;
+    width: 1.55vw;
+    top:0.22vw;
+    right:0;
+}
+
+.linkbodyb {
+    position: absolute;
+    height:1.55vw;
+    width: 1.55vw;
+    background-color: #000000;
+}
+
+.linkbodyp {
+    position: absolute;
+    height:calc(1.55vw - 1px);
+    width: calc(1.55vw - 1px);
+    background-color: #FFC0E1;
+}
+
+.linkbodyww {
+    position: absolute;
+    height:1px;
+    width: calc(1.55vw - 2px);
+    background-color: white;
+}
+
+.linkbodywh {
+    position: absolute;
+    height:calc(1.55vw - 2px);
+    width: 1px;
+    background-color: white;
+}
+
+.linkbodydpw {
+    position: absolute;
+    height:1px;
+    width: calc(1.55vw - 2px);
+    bottom:1px;
+    left:1px;
+    background-color: #FA81BF;
+}
+
+.linkbodydph {
+    position: absolute;
+    height:calc(1.55vw - 2px);
+    width: 1px;
+    top:1px;
+    right:1px;
+    background-color: #FA81BF;
 }
 
 .content {
@@ -129,51 +193,48 @@ body {
     margin:2%;
 }
 
-
-.sticker {
-    position: absolute;
-}
-
 .fashion:hover, .fashion:focus {
    animation: 1s linear infinite border;
 }
 
 .logo {
+    top: 2.5vw;
     position:absolute;
-    height:80px;
+    height:6vw;
 }
 
 .deco.logo {
-    top:25px;
-    left:11px;
+    left:1vw;
 }
 
 .loli.logo {
-    top:23px;
-    left:-5px;
+    left:-0.5vw;
 }
 
 .gya.logo {
-    top:19px;
-    left:-3px;
+    top:2vw;
 }
 
 .explain {
     position:absolute;
-    top:70px;
-    font-size:14px;
+    top:6vw;
+    font-size:1vw;
     color:#F5419D;
 }
 
 .gya.explain {
-    top:55px;
+    top:4.5vw;
 }
 
 .explainbox {
     position:absolute;
-    width: 900px;
-    top:40px;
-    left:20px;
+    width:60vw;
+    top:3vw;
+    left:1.5vw;
+}
+
+.pspace {
+    height: 1vw;
 }
 
 @keyframes border {
@@ -212,12 +273,10 @@ body {
     .windowbodyb {
         height: 42vw;
         width: 92vw;
-
     }
     
     .windowbodyww {
         width: calc(92vw - 3px);
-
     }
     
     .windowbodywh {
@@ -233,37 +292,20 @@ body {
     }
     
     .windowheader {
-        height: 1.75vw;
         width: calc(92vw - 5px);
-    }
-    
-    .welcome {
-        top:0.1vw;
-        font-size: 1.75vw;
     }
     
     .logo {
         height:7vw;
     }
     
-    .deco.logo {
-        top:2.5vw;
-        left:1vw;
-    }
-    
-    .loli.logo {
-        top:2.5vw;
-        left:-0.5vw;
-    }
-    
     .gya.logo {
-        top:2vw;
         left:-0.25vw;
     }
     
     .explain {
         top:6vw;
-        font-size:1.35vw;
+        font-size: 1.75vw;
     }
 
     .gya.explain {
@@ -275,4 +317,13 @@ body {
         top:4vw;
         left:2vw;
     }
+    
+    .welcome {
+        top:0.4vw;
+    }
+
+    .link {
+        bottom:6%;
+    }
+
   }
