--- a/subcultures/harajukufashion/harajuku.css
+++ b/subcultures/harajukufashion/harajuku.css
@@ -305,7 +305,7 @@ body {
     
     .explain {
         top:6vw;
-        font-size: 1.75vw;
+        font-size: 1.75vh;
     }
 
     .gya.explain {
